issue #588 初期画面設定でメニュー更新アイコンは表示しない (+1 squashed commits)
Squashed commits:

[41cee66] issue #588
検索実行時にサイドパネルがタブの罫線にかかる

--- a/src/main/web/skin/editrole.css
+++ b/src/main/web/skin/editrole.css
@@ -151,8 +151,8 @@ body{
 	width: 1px;
 	height: 1px;
 	position: absolute;
-	top: -9999;
-	left: -9999;
+	top: -9999px;
+	left: -9999px;
 	display: none;
 }
 
